--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-form": "^6.6.3",
     "redux-promise": "^0.5.3"
   }
 }
